--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,15 @@ body {
 
 ul {
     list-style: none;
+    padding-left: 0;
+}
+
+header ul li {
+    display: inline-block;
+    padding: .4rem;
+    margin-right: .5rem;
+    background-color: white;
+    color: cornflowerblue;
 }
 
 .ms-list {
